--- a/alamancevotes/src/components/layout.css
+++ b/alamancevotes/src/components/layout.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
     height: 100vh;
+	background-color: #3AAFA8;
 }
 ol, ul {
 	list-style: none;
@@ -48,15 +49,31 @@ table {
 	border-spacing: 0;
 }
 
-header {
-    border-bottom: 1px solid #FFFFFF;
-}
-
 h1 {
     font-family: 'Mulish', 'Helvetica', sans-serif;
     font-size: 60px;
     font-weight: 800;
     text-transform: uppercase;
+}
+
+.header__link {
+	font-family: 'Mulish', 'Helvetica', sans-serif;
+	font-size: 30px;
+	font-weight: 400;
+	margin-left: 40px;
+	color: #FFFFFF;
+	transition: color .3s ease;
+	text-decoration: none;
+}
+
+.header__link:hover {
+	color: #182429;
+}
+
+.header__wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .header__image {
@@ -65,4 +82,48 @@ h1 {
 
 .header__menu {
     display: flex;
+}
+
+.header__logo img {
+	width: 300px;
+}
+
+footer {
+	font-family: 'Mulish', 'Helvetica', sans-serif;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	max-width: 1080px;
+	margin: 0 auto;
+	padding: 20px 0;
+	color: #FFFFFF;
+}
+
+a {
+	color: #182429;
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	padding: 50px 0;
+}
+
+.button {
+	font-family: 'Mulish', 'Helvetica', sans-serif;
+ 	width: 400px;
+	margin: 0 auto;
+	background-color: #DEF2F1;
+	color: #182429;
+	border: 0;
+	outline: 0;
+	font-size: 30px;
+	text-transform: uppercase;
+	padding: 16px 30px;
+	box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.3);
+	cursor: pointer;
+	font-weight: 600;
+	display: block;
+	margin-bottom: 50px;
 }
